Changelog
=========

Release 0.11.0
--------------
* Code refactoring
* New DB Objects, more adapted to STIX
* Removed unused files
* Webclient uses angularjs
* Redesing of frontend
* Simplified handlers
* Handlers have a separate configuration file
* Added View Types for attributes to decapsulated view and api
* The interfaces accesses the API (the GUI now can be turned off)
* Modify events via REST API: object/attribute add/remove
* Proposal mechanism for REST API
* submit proposals for adding objects/attributes via REST
* Enhanced ACL, for admins and users
* Enhanced relation finder (Similar attributes can be grouped, but still the relation is done by ==)
* Review right management (REL_0.10.0+)
* STIX support for observables, indicators, incidents, TTP
* Operators for observales

Release 0.10.3
--------------
* Bug Fixes
  - Encoding issues take 2
  - Relations are shown only once
* Relations detail view changed:
  - Attributes values are regrouped, however the feature of datatables is currently unavailable

Release 0.10.2
--------------
* Bug Fixes
  - Editing ioc, share is taken into account
  - Object view:
    - Add buttons are shown to non owners
    - Displaying issues for non owners
  - Fixed display issues for event titles
  - User adding/editing
* Admins can change the event owner groups
* Rest throws new custom messages for
  - double uuids
  - Unkown definition
* Admins can activate users manually
* Admins can resend activation mail if the user was not validated

Release 0.10.1
--------------
* Added MailHandler (requires eml_parser see doc for more informations)
  NOTE: the Attribute is not associated to any object.
* One can create objects inside handlers along their attributes
* Improved Search by the following fields
      - Event Title
      - Event Description
      - Event TLP
      - Event Analysis
      - Event Status
      - uuid (Looks up in Attributes,Object and Events)

Release 0.10.0
--------------